@@ -36,6 +36,7 @@ class PropelColumnTypes
 		VARCHAR = "VARCHAR",
 		LONGVARCHAR = "LONGVARCHAR",
 		CLOB = "CLOB",
+		CLOB_EMU = "CLOB_EMU",
 		NUMERIC = "NUMERIC",
 		DECIMAL = "DECIMAL",
 		TINYINT = "TINYINT",
@@ -62,6 +63,7 @@ class PropelColumnTypes
 		self::VARCHAR     => PDO::PARAM_STR,
 		self::LONGVARCHAR => PDO::PARAM_STR,
 		self::CLOB        => PDO::PARAM_LOB,
+		self::CLOB_EMU    => PDO::PARAM_STR,
 		self::NUMERIC     => PDO::PARAM_STR,
 		self::DECIMAL     => PDO::PARAM_STR,
 		self::TINYINT     => PDO::PARAM_INT,
